--- a/juery-plugins/index.html
+++ b/juery-plugins/index.html
@@ -18,10 +18,11 @@
         <![endif]-->
         <div class="test" ></div>
         <script src="../bower_components/jquery/dist/jquery.js"></script>
+        <script src="../bower_components/jquery-ui/jquery-ui.js"></script>
         <script src="star.js"></script>
         <script>
             $(function(){
-                $('.test').starIt();
+                $('.test').starIt('init',1,2,3);
             });
         </script>
     </body>
