--- a/juery-plugins/index.html
+++ b/juery-plugins/index.html
@@ -17,6 +17,9 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div class="test" ></div>
+        <div>
+            
+        </div>
         <script src="../bower_components/jquery/dist/jquery.js"></script>
         <script src="../bower_components/jquery-ui/jquery-ui.js"></script>
         <script src="star.js"></script>
